# django_mini_project

./: .gitignore  .gitmessage.txt  pyproject.toml
.github/workflows/: checks.yml
accounts/: models.py
config/settings/: base.py  dev.py  prod.py
config/urlsconf/: urls_base.py  urls_dev.py  urls_prod.py
users/: models.py
