[tool.poetry]
name = "django-mini-project"
version = "0.1.0"
description = ""
authors = ["hotbari <138793425+hotbari@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-restframework = "^0.0.1"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.27.2"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
